techhope/app/globals.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

html {
    scroll-behavior: smooth;
    scroll-padding-top: 7.5rem;
}

body {
    font-family: "Poppins", sans-serif;
}

section {
    margin-bottom: 7.5rem;
    padding: 0 3rem;
}

a {
    text-decoration: none;
    color: #000;
}

p {
    color: #3C3C3C;
}

h3,h4,h5,h6 {
    font-weight: 500;
}

.btn {
    background-color: #5580E9;
    color: #fff;
    padding: 0.5rem 1.5rem;
    border-radius: 10px;
    border: solid 2px #5580E9;
    font-weight: bold;
    text-align: center;
    font-size: inherit;
    
    transition: 0.1s ease all;
}
.btn:hover {
    background-color: transparent;
    color: #5580E9;
}

.donationPopup {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
    background-color: #5580E9;
    padding: 2rem;
    color: white;
    width: 100%;
    height: 101vh;
    justify-content: center;
    flex-direction: column;
    display: none;

    gap: 2rem;
    text-align: center;
}
.donationPopup > p {
    color: white;
    font-size: 1.5rem;
}
.donationPopup > h1 {
    font-weight: 500;
}

.closePopup {
    position: absolute;
    top: 2rem;
    right: 2rem;
    color: white;
    cursor: pointer;
    transform: scale(2);
    transition: all 0.2s ease;
}
.closePopup:hover {
    transform: scale(2.5);
}


.show {
    display: flex !important;
}

